--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,11 +36,11 @@ steps:
     command: 'restore'
     projects: '**/*.csproj'
 
-- template: DevOps/build.yml
+- template: build.yml
   parameters:
     buildConfiguration: 'Debug'
 
-- template: DevOps/build.yml
+- template: build.yml
   parameters:
     buildConfiguration: 'Release'
 
